# ROS2-Autonomous-Robot-Simulation

./: .gitignore  README.md  landmark_log.csv
src/: README.md
src/ntu_robotsim/: CMakeLists.txt  package.xml
src/ntu_robotsim/config/: demo.rviz  nav2_params.yaml  navigate_to_pose.xml  single_robot.rviz  single_robot_maze_sim.yaml  single_robot_ros_gz_bridge.yaml  spawn_robot.yaml
src/ntu_robotsim/launch/: cwmaze.launch.py  single_robot_sim.launch.py  spawn_robot.launch.py
src/ntu_robotsim/models/COSTAR_HUSKY_SENSOR_CONFIG_REDUCED/: model.sdf
src/ntu_robotsim/models/cars/: model.config  model.sdf
src/ntu_robotsim/models/cars/meshes/: cars.dae
src/ntu_robotsim/models/fast_sign/: model.config  model.sdf
src/ntu_robotsim/models/fast_sign/meshes/: fast_sign.dae
src/ntu_robotsim/models/jetbot/: model.config  model.sdf
src/ntu_robotsim/models/maze/: model.config  model.sdf
src/ntu_robotsim/models/oranges/: model.config  model.sdf
src/ntu_robotsim/models/slow_sign/: model.config  model.sdf
src/ntu_robotsim/models/stop_sign/: model.config  model.sdf
src/ntu_robotsim/models/trees/: model.config  model.sdf
src/ntu_robotsim/scripts/: auto_explore_node.py  basic_mapping_node.py  goal_detection_node.py  landmark_database_node.py  maze_timer_node.py  nav2_goal_node.py  object_counter_node.py  odom_tf_broadcaster.py  odom_to_tf_node.py  pc_to_depth_image.py  pc_to_scan_node.py  resource_monitor_node.py  rgbd_sync_republisher.py  scan_restamper.py  traffic_rules_node.py
src/ntu_robotsim/worlds/cwmaze/: cwmaze.sdf  cwmazenew.sdf
(+9 files in other folders)
